<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#e3e3e3">
<TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal|center_vertical"
    android:stretchColumns="0,3">
    <TableRow android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_username"/>
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/login_username"
            android:hint="@string/login_username_hint"/>
        <TextView />
    </TableRow>
    <TableRow android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView />
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_passwd"/>
        <EditText android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_passwd"
            android:hint="@string/login_passwd_hint"
            android:inputType="textPassword"/>
        <TextView />
    </TableRow>
</TableLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_loginbutton"
        android:text="@string/login_loginButton"/>
        <TextView
            android:layout_width="24dp"
            android:layout_height="wrap_content" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_exitbutton"
        android:text="@string/long_exitButton"/>
    </LinearLayout>
</LinearLayout>