<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
                android:background="#eeeeee">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:id="@+id/myself_edit"
        android:textSize="24sp"
        android:textColor="#00F"
        android:layout_alignParentTop="true"
        android:layout_marginTop="3dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_below="@id/myself_edit"
        android:background="#FFF"
        android:orientation="horizontal"
        android:id="@+id/line1">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/myself_headImage"
            android:contentDescription="@string/headImage"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:clickable="false"
            android:scaleType="fitCenter"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="10dp">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:id="@+id/myself_userName"
                android:textSize="20sp"
                android:maxLines="1"
                android:enabled="false"
                android:text="@string/UserName"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/myself_describe"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:inputType="textMultiLine"
                android:text="@string/describe"
                android:enabled="false"
                android:background="@null"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@android:color/transparent"
        android:layout_marginTop="20dp"
        android:id="@+id/line2"
        android:layout_below="@id/line1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_gravity="center_vertical"
            android:text="@string/UserID"
            android:layout_marginStart="20dp"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@android:color/transparent"
            android:layout_gravity="center_vertical"
            android:id="@+id/myself_userID"
            android:gravity="center"
            android:textSize="24sp"
            android:layout_marginEnd="5dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/line2"
        android:layout_marginTop="10dp"
        android:background="#aaa"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/line2"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:id="@+id/line3"
        android:background="@android:color/transparent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/department"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_gravity="center_vertical"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:id="@+id/myself_department"
            android:textStyle="bold"
            android:background="@android:color/transparent"
            android:textSize="24sp"
            android:layout_marginEnd="5dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/line3"
        android:layout_marginTop="10dp"
        android:background="#aaa"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_below="@id/line3"
        android:layout_marginTop="15dp"
        android:id="@+id/line4"
        android:background="@android:color/transparent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/email"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_gravity="center_vertical"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/myself_email"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:textSize="24sp"
            android:background="@android:color/transparent"
            android:layout_marginEnd="5dp"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/clear_record"
        android:textSize="24sp"
        android:layout_below="@id/line4"
        android:layout_marginTop="40dp"
        android:textColor="#00F"
        android:text="@string/clear_record"
        android:layout_centerHorizontal="true"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/clear_record"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:id="@+id/myself_send_addFriend_Exit"
        android:text="@string/exit"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:background="@android:color/transparent"
        />
</RelativeLayout>