<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e3e3e3">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24dp"
        android:layout_alignParentTop="true"
        android:id="@+id/myTitle"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/myTitle"
        android:layout_above="@+id/radioGroup"
        android:id="@+id/replace"/>
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/session"
            android:gravity="center"
            android:background="@drawable/radio_style"
            android:padding="4dp"
            android:layout_alignParentStart="true"
            android:button="@null"
            android:textSize="24dp"
            android:layout_marginStart="10dp"
            android:text="@string/sessionTitle"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/friends"
            android:padding="3dp"
            android:background="@drawable/radio_style"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textSize="24dp"
            android:text="@string/friendsTitle"
            android:button="@null"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/myself"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"
            android:padding="4dp"
            android:background="@drawable/radio_style"
            android:gravity="center"
            android:textSize="24dp"
            android:button="@null"
            android:text="@string/myselfLabel"/>
        </RelativeLayout>
    </RadioGroup>
</RelativeLayout>
